Add hopper and dropper compat